@@ -157,6 +157,18 @@
 <td><p>[degree]</p></td>
 <td><p>measurement zenith angle at sounder pixel centre</p></td>
 </tr>
+<tr class="row-even"><td><p><strong>SO2_column_number_density</strong></p></td>
+<td><p>float</p></td>
+<td><p>{<em>time</em>}</p></td>
+<td><p>[DU]</p></td>
+<td><p>SO2 column</p></td>
+</tr>
+<tr class="row-odd"><td><p><strong>SO2_layer_height</strong></p></td>
+<td><p>float</p></td>
+<td><p>{<em>time</em>}</p></td>
+<td><p>[m]</p></td>
+<td><p>retrieved plume altitude</p></td>
+</tr>
 <tr class="row-even"><td><p><strong>validity</strong></p></td>
 <td><p>int8</p></td>
 <td><p>{<em>time</em>}</p></td>
@@ -227,6 +239,14 @@
 <tr class="row-odd"><td><p><strong>sensor_zenith_angle</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/data/geolocation_information/sounder_pixel_zenith[]</strong></p></td>
+</tr>
+<tr class="row-even"><td><p><strong>SO2_column_number_density</strong></p></td>
+<td><p><em>path</em></p></td>
+<td><p><strong>/data/so2_col[]</strong></p></td>
+</tr>
+<tr class="row-odd"><td><p><strong>SO2_layer_height</strong></p></td>
+<td><p><em>path</em></p></td>
+<td><p><strong>/data/so2_altitude[]</strong></p></td>
 </tr>
 <tr class="row-even"><td rowspan="2"><p><strong>validity</strong></p></td>
 <td><p><em>path</em></p></td>
