@@ -2,6 +2,7 @@
   - IASI-NG L2 SFC: renamed dust variable to dust_aerosol_index.
   - IASI-NG L2 TCWV: added missing water_vapor_column_density.
   - IASI-NG L2 CLD: added cloud property variables.
+  - IASI-NG L2 SO2: added SO2 column and layer height variables.
   - S5 L1B: update description clarifying that wavelength values are
     based on evaluating Chebyshev coefficients.
   - S5P L1b: error/noise values of -126 are now mapped to NaN.
